Chrome fix align right

--- a/app/assets/stylesheets/administrate/components/_newaid.scss
+++ b/app/assets/stylesheets/administrate/components/_newaid.scss
@@ -185,7 +185,7 @@
     .alert-controls {
       display: flex;
       align-items: center;
-      justify-content: right;
+      justify-content: flex-end;
     button.js-hide-convention {
       opacity: 0.79;
       color: white;
